# phrosty

./: .buildinfo  .cruft.json  .gitignore  .pre-commit-config.yaml  156.feature.rst  CHANGES.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  api.html  changes.html  codespell-ignore.txt  development.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini  usage.html
.doctrees/: api.doctree  changes.doctree  development.doctree  index.doctree  installation.doctree  usage.doctree
.doctrees/__intersphinx_cache__/: numpy_objects.inv  scipy_objects.inv
.doctrees/api/: phrosty.imagesubtraction.gz_and_ext.doctree  phrosty.imagesubtraction.sky_subtract.doctree  phrosty.imagesubtraction.stampmaker.doctree  phrosty.photometry.ap_phot.doctree  phrosty.photometry.psf_phot.doctree  phrosty.photometry.psfmodel.doctree  phrosty.pipeline.Pipeline.doctree  phrosty.pipeline.PipelineImage.doctree  phrosty.utils.get_corners.doctree  phrosty.utils.get_exptime.doctree  phrosty.utils.get_mjd.doctree  phrosty.utils.get_mjd_info.doctree  phrosty.utils.get_mjd_limits.doctree  phrosty.utils.get_radec_limits.doctree  phrosty.utils.get_roman_bands.doctree  phrosty.utils.get_transient_info.doctree  phrosty.utils.get_transient_mjd.doctree  phrosty.utils.get_transient_peakmjd.doctree  phrosty.utils.get_transient_radec.doctree  phrosty.utils.get_transient_zcmb.doctree  phrosty.utils.make_object_table.doctree  phrosty.utils.pointings_near_mjd.doctree  phrosty.utils.radec_isin.doctree  phrosty.utils.read_truth_txt.doctree  phrosty.utils.transient_in_or_out.doctree
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: FEATURE_REQUEST.md  ISSUE_TEMPLATE.md  PR_TEMPLATE.md
.github/workflows/: changelog.yml  ruff.yaml  run_labeler.yml  sphinx-deploy.yml  sub_package_update.yml
_modules/: index.html
_modules/phrosty/: imagesubtraction.html  photometry.html  pipeline.html  utils.html
_sources/: api.rst.txt  changes.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/api/: phrosty.imagesubtraction.gz_and_ext.rst.txt  phrosty.imagesubtraction.sky_subtract.rst.txt  phrosty.imagesubtraction.stampmaker.rst.txt  phrosty.photometry.ap_phot.rst.txt  phrosty.photometry.psf_phot.rst.txt  phrosty.photometry.psfmodel.rst.txt  phrosty.pipeline.Pipeline.rst.txt  (+18 more)
_static/: alabaster.css  basic.css  documentation_options.js
api/: phrosty.imagesubtraction.gz_and_ext.html  phrosty.imagesubtraction.sky_subtract.html  phrosty.imagesubtraction.stampmaker.html  phrosty.photometry.ap_phot.html  phrosty.photometry.psf_phot.html  phrosty.photometry.psfmodel.html  phrosty.pipeline.Pipeline.html  phrosty.pipeline.PipelineImage.html  phrosty.utils.get_corners.html  phrosty.utils.get_exptime.html  phrosty.utils.get_mjd.html  phrosty.utils.get_mjd_info.html  phrosty.utils.get_mjd_limits.html  phrosty.utils.get_radec_limits.html  phrosty.utils.get_roman_bands.html  phrosty.utils.get_transient_info.html  phrosty.utils.get_transient_mjd.html  phrosty.utils.get_transient_peakmjd.html  phrosty.utils.get_transient_radec.html  phrosty.utils.get_transient_zcmb.html  phrosty.utils.make_object_table.html  phrosty.utils.pointings_near_mjd.html  phrosty.utils.radec_isin.html  phrosty.utils.read_truth_txt.html  phrosty.utils.transient_in_or_out.html
changes/: 101.bugfix.rst  113.feature.rst  114.feature.rst  115.bugfix.rst  118.feature.rst  123.phrosty.rst  124.bugfix.rst  130.docs.rst  131.feature.rst  133.docs.rst  134.feature.rst  135.docs.rst  136.docs.rst  138.docs.rst  140.phrosty.rst  144.docs.rst  147.bugfix.rst  149.feature.rst  151.bugfix.txt  165.phrosty.rst  169.feature.rst  179.docs.rst  180.docs.rst  182.docs.rst  186.bugfix.rst  188.bugfix.rst  189.bugfix.rst  191.bugfix.rst  192.feature.rst  193.feature.rst  194.bugfix.rst  195.bugfix.rst  199.feature.rst  201.feature.rst  45.feature.rst  66.phrosty.rst  67.phrosty.rst  72.feature.rst  75.bugfix.rst  82.feature.rst  (+6 more)
docs/: api.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
examples/: animate_sn_with_sfft.py
paper/: paper.bib  paper.md  paper.tex
phrosty/: __init__.py  imagesubtraction.py  nn2.py  objectidentification.py  photometry.py  pipeline.py  plotaesthetics.py  plotting.py  sourcedetection.py  unused.py  utils.py
ropeat/: __init__.py  photometry.py  plotaesthetics.py  plotting.py  sourcedetection.py  utils.py
tests/: 20172782_instances_templates_1.csv  conftest.py  test_imagesubtraction.py  test_nn2.py  test_utils.py
(+38 files in other folders)
